# icp-clicker

./: .env.example  .gitignore  Cargo.toml  README.md  _annotations.coco.json  akai_backend.wasm  canister_ids.json  cons.py  cons_active_unsupervised.py  cons_advance_reinforce.py  cons_features.py  cons_reinforce.py  cons_unsupervised_training.py  consensus.py  consensus2.ipynb  consensus3.py  deploy_and_run.sh  dfx.json  full_anotation.json  generate.sh  makedata.py  package-lock.json  package.json  updated_modified_annotations_with_outliers.json  visualize_annotations.py
.github/workflows/: main.yml
HACK_BECAUSE_OF_ALLOW_JS/akai_frontend/: vite.config.js
HACK_BECAUSE_OF_ALLOW_JS/akai_frontend/src/: App.js
HACK_BECAUSE_OF_ALLOW_JS/akai_frontend/src/components/: Clicker.js  Merging.js  SidePannel.js  UserProfile.js
akai/: pyvenv.cfg
src/akai_backend/: Cargo.toml  akai_backend.did
src/akai_backend/src/: aliens.rs  badges.rs  lib.rs  scale.rs  task.rs  user.rs  utils.rs
src/akai_backend/src/backup/: async.rs  mod.rs  sync.rs
src/akai_backend/src/db/: aliens.rs  mod.rs  powerups.rs  task.rs  utils.rs
src/akai_backend/src/db/task/: debug.rs  mod.rs  ops.rs
src/akai_backend/src/db/user/: debug.rs  mod.rs  ops.rs
src/akai_backend/src/scale_ops/: manager.rs  mod.rs  scale.rs
src/akai_frontend/: package.json  vite.config.js
src/akai_frontend/public/: .ic-assets.json5  App.jsx
src/akai_frontend/src/: App.css  App.jsx  index.css  main.jsx
src/akai_frontend/src/components/: Clicker.jsx  ConnectScreen.jsx  ImageLabel.css  ImageLabel.jsx  Login.jsx  Merging.jsx  SidePannel.jsx  UserProfile.jsx
src/deployer/: Cargo.toml  deployer.did
src/deployer/src/: lib.rs
src/uploader/: Cargo.toml
src/uploader/src/: main.rs
test/: modified_annotations.json
