[package]
name = "akai_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
azure_core = "0.20.0"
azure_sdk_storage_blob = "0.45.3"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
candid = "0.10"
futures = "0.3.30"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-sqlite = "0.1.0"
lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["serde", "v4", "js"] }

