[package]
name = "akai_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
candid = "0.10"
# dotenv = "0.15.0"
# flate2 = "1.0.33"
futures = "0.3.30"
ic-cdk = "0.16"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-sqlite-features = "0.1.1"
ic-stable-structures = "0.6.5"
lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
ic-rand = "0.1.1"
ic-stable-memory = "0.4.4"

[build]
target = ["wasm32-unknown-unknown"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]

